QueryModuleUtil related changes after code refactoring.
SVN-Revision: 14644